# card-management-python-sdk

./: README.md  pyproject.toml
doc/: client.md
doc/auth/: basic-authentication.md  oauth-2-client-credentials-grant.md
doc/controllers/: card.md  customer.md  restriction.md
doc/models/: account-restriction-request.md  account-restriction-response.md  account-velocity-limit.md  audit-request.md  auto-renew-card-request-auto-renew-cards-items.md  auto-renew-card-request.md  auto-renew-card-response-data-items.md  auto-renew-card-response.md  bundle-restriction-update.md  bundle-restriction.md  bundled-restrictions-list.md  card-contact.md  card-delivery-address.md  card-delivery-contact.md  card-detail.md  card-details-response-card-delivery-address.md  card-details-response-pin-delivery-address.md  card-details-response.md  card-management-v1-cancel-request.md  card-management-v1-ordercard-request.md  card-management-v1-pinreminder-request.md  card-management-v1-updatestatus-request.md  card-settings.md  card.md  create-bundle-request-restrictions.md  create-bundle-request.md  create-bundle-response-data-items-cards-items.md  create-bundle-response-data-items.md  create-bundle-response.md  day-time-restrictions.md  delete-bundle-request.md  delete-bundle-response.md  delivery-address-update-response.md  delivery-address-update.md  error-details.md  filters-2.md  location-restrictions-country-restrictions.md  location-restrictions-network-restrictions-items.md  location-restrictions-partner-site-restrictions-items.md  location-restrictions-shell-site-restrictions-items.md  (+46 more)
shellcardmanagementapis/: __init__.py  api_helper.py  configuration.py  shellcardmanagementapis_client.py
(+255 files in other folders)
